--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,4 @@
-{
-  "homepage": "https://github.com/JIllWesterfelhaus/ReactPortfolio",
-  "name": "portfolio",
+{ "homepage": "https://JIllWesterfelhaus.github.io/ReactPortfolio/",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -38,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
